# TREVORProxy_serverless

./: .gitignore  README.md  infra.sh  proxy.py  proxy.sh  pyproject.toml  requirements.txt
infra/: .terraform.lock.hcl  autoscaling.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  providers.tf  sqs.tf  variables.tf  vpc.tf
infra/src/: Dockerfile
trevorproxy_serverless/: cli.py
